[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://wintex.pro'
license = 'Unlicense'
name = 'pallet-nars'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
sp-std = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119" }
log = { version = "0.4.14", default-features = false }
pallet-babe = { default-features = false, version = '3.0.0' }
sp-consensus-vrf = { default-features = false, version = '0.9.0' }
schnorrkel = { version = '0.10.1', default-features = false, features = ["preaudit_deprecated", "u64_backend"] }
merlin = { version = '3.0.0', default-features = false }
sha2 = { version = '0.9.3', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-session/std',
    'sp-std/std',
    'sp-runtime/std',
    'log/std',
    'pallet-babe/std',
    'sp-consensus-vrf/std',
    'schnorrkel/std',
    'merlin/std',
    'sp-core/std'
]
